# agent-template

./: .env.example  .gitignore  pyproject.toml  start_api.sh
app/: main.py
app/agents/: __init__.py  agent.py  agent_graph.py
app/agents/llm/: __init__.py  provider.py
app/agents/prompts/: prompt_generator.py
app/agents/vector_store/: retriever.py
app/agents/vector_store/sql/: pgvector.sql  schema.sql
app/api/: agents.py
app/config/: __init__.py  logging.py  settings.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: chat.tsx
notebook/: test_app.ipynb
